Sonar lint compliancy